--- a/style.css
+++ b/style.css
@@ -9,6 +9,10 @@
 .grid div{
     height: 20px;
     width: 20px;
-    background-color: rgb(255, 0, 0);
+  
     
+}
+
+.tetromino{
+    background-color: aqua;
 }
