--- a/style.css
+++ b/style.css
@@ -1,37 +1,50 @@
-.container{
-    display: flex;
+.container {
+  display: flex;
+  justify-content: center;
 }
 
-.grid{
-    width: 200px;
-    height: 400px;
-    display: flex;
-    flex-wrap: wrap;
-    background-color: yellow;
+.game-options {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin-bottom: 20px;
 }
 
-.grid div{
-    height: 20px;
-    width: 20px;
-  
-    
+.grid {
+  width: 200px;
+  height: 400px;
+  display: flex;
+  flex-wrap: wrap;
+  background-color: yellow;
 }
 
-.tetromino{
-    background-color: aqua;
+.grid div {
+  height: 20px;
+  width: 20px;
 }
 
-.mini-grid{
-    width: 80px;
-    height: 80px;
-    display: flex;
-    flex-wrap: wrap;
-    background-color: yellow;
-    margin-left: 50px;
+.tetromino {
+  background-color: aqua;
 }
 
-.mini-grid div{
-    height: 20px;
-    width: 20px;
-    
+.mini-section {
+  margin-left: 50px;
+}
+
+#mini-text {
+  margin-top: 0%;
+}
+
+.mini-grid {
+  width: 80px;
+  height: 80px;
+  display: flex;
+  flex-wrap: wrap;
+  background-color: yellow;
+}
+
+.mini-grid div {
+  height: 20px;
+  width: 20px;
 }
